Move head.js to CDN (Should be cached/faster, and I'm going to try hosting the map myself for anyone who wants to use it, so the less bandwidth that costs, the better)

--- a/www/index_local.html
+++ b/www/index_local.html
@@ -23,7 +23,7 @@
 
 <script src="js/head.min.js"></script>
 <script type="text/javascript">
-head.js(
+head.load(
    {jquery:            "js/jquery-1.11.0.min.js"},
    {jquery_ui:         "js/jquery-ui-1.10.4.min.js"},
    {jquery_mousewheel: "js/jquery.mousewheel-3.1.9.min.js"},
