--- a/www/poster_print.html
+++ b/www/poster_print.html
@@ -16,7 +16,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
-<script src="js/head.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script>
 <script type="text/javascript">
 
 var gConfig;
@@ -26,7 +26,7 @@ var gPosterWidth;
 var gPosterIconScale;
 var gPosterFontScale;
 
-head.js(
+head.load(
    {jquery:            "https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"},
    {jquery_ui:         "https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"},
    {jquery_mousewheel: "js/jquery.mousewheel-3.1.9.min.js"},
