--- a/instructions/dropbox.html
+++ b/instructions/dropbox.html
@@ -78,7 +78,7 @@
 		<li><a href="https://zapier.com/learn/how-to/generate-direct-dropbox-link/">Turning the link into a direct download link</a> by replacing 
 		<code>www.dropbox.com</code> with <code>dl.dropboxusercontent.com</code></a>.</li>
 		<li><a href="UrlEncoder.html">Encoding</a> the direct download link, so the finished URL will be nicely formatted.</li>
-		<li>Adding the encoded link as the src parameter to the URL of the map generator, i.e. adding it the end of this URL:</li>
+		<li>Adding the encoded link as the src parameter to the URL of the map generator, i.e. adding it to the end of this URL:</li>
 			<pre>https://buildingwithblocks.info/map173/index.html?src=</pre>
 
 			Example:<br/>
@@ -87,9 +87,10 @@
 		</ol>
 		<br/>
 		
-		
+		<!--
 		<p><span class="note">(Dropbox allows cross-origin resource sharing, so putting your Dropbox URL onto the end of the Google Drive URL 
 		above works fine - you don't need to have a Google Drive account)</span></p>
+		-->
 
 		<!--
 		<h3>Tip</h3>
